# file-manager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
docs/: Doxyfile
html/: annotated.html  class_far-members.html  class_far.html  class_status-members.html  class_status.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  far_8h_source.html  files.html  functions.html  functions_func.html  namespacemembers.html  namespacemembers_enum.html  namespaces.html  namespacestatus.html  status_8h_source.html
html/search/: all_0.js  all_1.js  all_2.js  all_4.js  classes_0.js  classes_1.js  enums_0.js  functions_1.js  functions_3.js  functions_4.js  namespaces_0.js  searchdata.js
libs/lib/: libboost_date_time-vc143-mt-gd-x32-1_82.lib  libboost_date_time-vc143-mt-gd-x64-1_82.lib  libboost_date_time-vc143-mt-x32-1_82.lib  libboost_date_time-vc143-mt-x64-1_82.lib
libs/lib/cmake/boost_date_time-1.82.0/: boost_date_time-config.cmake
src/: far.cpp  far.h  status.cpp  status.h  status_code.h  user-interface.h
test/: CMakeLists.txt  test-far.cpp  test-main.cpp
